--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 serde_json = "1.0.91"
 serde = { version = "1.0.147", features = ["derive"] }
-tauri = { version = "1.2.3", features = ["api-all", "devtools", "system-tray", "updater"] }
+tauri = { version = "1.2.3", features = ["api-all", "devtools", "system-tray"] }
 
 [features]
 # by default Tauri runs in production mode
